Fix pagination when id is not requested